# fastapi_exam

./: README.md  alembic.ini  compose.yml  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  db_depends.py  main.py  scemas.py  schemas.py  utils.py
app/migrations/versions/: 2025_10_03_0916-76f9fe0976fb_create_category_and_product_tables.py  3e8afa5e34d1_add_user_model.py  6208f15b6853_review_model_added.py  c718d9b6c94f_initial_migration_for_postgresql.py
app/models/: __init__.py  categories.py  products.py  reviews.py  users.py
app/routers/: categories.py  products.py  reviews.py  users.py
